--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,6 @@
         {% endfor %}
     </ul>
 {% else %}
-    <p>No accounts available.</p>
+    <p style="text-align: center;">No accounts available.</p>
 {% endif %}
 {% endblock %}
