--- a/templates/balance.html
+++ b/templates/balance.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% set title = "Check Balance" %}
-{% set css_file = "balance.css" %}
+{% set css_file = "base.css" %}
+{% set page_class = "balance" %}
 
 {% block content %}
 <h1 style="text-align: center;">Check Balance</h1>
 {% if message %}
-<p class="{{msg_type}}">{{message}}</p>
+<p class="{{ msg_type }}">{{ message }}</p>
 {% endif %}
 <form method="post">
     <label>Account No:</label>
