--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% set title = "Home" %}
-{% set css_file = "home.css" %}
+{% set css_file = "base.css" %}
+{% set page_class = "home" %}
 
 {% block content %}
 <h1 style="text-align: center;">Welcome to the ATM App</h1>
